<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:onClick="listarClientesClick"
        android:text="@string/listar_clientes"
        android:textSize="@dimen/activity_main_buttons" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:onClick="buscarClienteClick"
        android:text="@string/buscar_cliente"
        android:textSize="@dimen/activity_main_buttons" />

    <Button
        android:id="@+id/btClientes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:onClick="voltarClick"
        android:text="@string/voltar_tela"
        android:textSize="@dimen/activity_main_buttons" />

</LinearLayout>
