<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btClientes"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:onClick="clientesClick"
        android:text="@string/clientes"
        android:textSize="@dimen/activity_main_buttons" />

    <Button
        android:id="@+id/btProdutos"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/btClientes"
        android:layout_below="@+id/btClientes"
        android:layout_marginTop="24dp"
        android:text="@string/produtos"
        android:textSize="@dimen/activity_main_buttons" />

    <Button
        android:id="@+id/btOrcamentos"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/btProdutos"
        android:layout_below="@+id/btProdutos"
        android:layout_marginTop="33dp"
        android:text="@string/orcamentos"
        android:textSize="@dimen/activity_main_buttons" />

</RelativeLayout>