<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvCargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/activity_main_buttons" />

    <EditText
        android:id="@+id/etBuscarCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dado_busca_cliente"
        android:textSize="@dimen/activity_text" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/clientes_buscar_spIdioma"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.81" />
        <ImageButton
            android:id="@+id/clientes_buscar_imgBtVoz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0"
            android:src="@android:drawable/ic_btn_speak_now" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btBuscarCliente"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:textSize="@dimen/activity_clientes_buttons" />

    </LinearLayout>

</LinearLayout>